tests/fail-assign9.err
Fatal error: exception Failure("illegal assignment int array = float array in a = [3.5,2.5]")